traefic/1-app/ingress1.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.example.com`, `nginx.example.org`)
      kind: Rule
      services:
        - name: nginx-deploy-green
          port: 80
