traefic/1-app/ingress3.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.example.com`) && Headers(`From`, `test@example.com`)
      kind: Rule
      services:
        - name: nginx-deploy-main
          port: 80
  
# curl -H "From: test@example.com" nginx.example.com
