traefic/1-app/ingress5.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.example.com`) || (Host(`nginx.example.org`) && HeadersRegexp(`From`, `main@example.com`))
      kind: Rule
      services:
        - name: nginx-deploy-main
          port: 80
